--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An online store where users can browse products and add them to their cart",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,8 @@
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.3",
     "mongoose": "^5.6.11"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
