--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "An online store where users can browse products and add them to their cart",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "client-install": "npm install --prefix client",
+    "client": "npm start --prefix client",
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
