--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "apollo-link": "^1.2.12",
     "apollo-link-error": "^1.1.11",
     "apollo-link-http": "^1.5.15",
+    "graphql-tag": "^2.10.1",
     "react": "^16.9.0",
     "react-apollo": "^3.0.1",
     "react-dom": "^16.9.0",
